# Useful references: https://gn.googlesource.com/gn/+/main/docs/reference.md
# This is done by the calling script already
# import("//build/config/BUILDCONFIG.gn")

# Define the actual library target
static_library("orb_network_services") {
  sources = [
    "json_rpc/JsonRpcService.cpp",
    "json_rpc/JsonRpcServiceUtil.cpp",
    "json_rpc/JsonRpcCallback.cpp",
    "websocket_service.cpp"
  ]

  deps = [
    "//base", # For logging dependency
    "//third_party/jsoncpp",
    "//third_party/orb/external/libwebsockets/v4.3:libwebsockets",
  ]

  public_deps = []

  public_configs = [
    ":external_lib_config",
    "//third_party/orb/external/libwebsockets/v4.3:libwebsockets_public_config",
    "//third_party/jsoncpp:jsoncpp_config"
   ]
}

# Expose the include directory
config("external_lib_config") {
  include_dirs = [
    "include",
    "json_rpc",
  ]
  defines = [ "IS_CHROMIUM" ]
}

executable("test_orb_jsonrpcservice")
{
  sources = [
    "test/jsonrpcservice_unittest.cpp",
    "test/jsonrpcserviceutil_unittest.cpp"
  ]

  deps = [
    "//testing/gtest",
    "//testing/gtest:gtest_main",
    "//base", # For logging dependency,
    ":orb_network_services"
  ]
  testonly = true
}
